force-app/main/default/objects/Import_Message__c/Import_Message__c.object-meta.xml
<CustomObject>
    <description>This object will hold all the integration messages that are received by the Apex REST API.
The fields will contain general information about the message and the actual payload (data to add to Salesforce).
Related to this object are log messages that show the status of the processing of the integration message.</description>
    <label>Import Message</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>