force-app/main/default/objects/Import_Message__c/fields/Last_Import_Successful__c.field-meta.xml
<CustomField>
    <fullName>Last_Import_Successful__c</fullName>
    <description>This field displays true if the last processing of the import message was successful.</description>
    <formula>If (Log_Last_Start_DateTime__c =  Log_Last_Successful_DateTime__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Import Successful</label>
    <type>Checkbox</type>
</CustomField>