force-app/main/default/objects/Import_Message__c/fields/Log_Last_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Log_Last_Start_DateTime__c</fullName>
    <description>This field retrieves the last import start datetime. The value is used in the formula field Last_Import_Successful__c</description>
    <label>Log Last Start DateTime</label>
    <summarizedField>Import_Log__c.Import_Started_DateTime__c</summarizedField>
    <summaryForeignKey>Import_Log__c.Import_Message__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>