force-app/main/default/objects/Import_Message__c/fields/Log_Last_Successful_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Log_Last_Successful_DateTime__c</fullName>
    <description>This field retrieves the import start datetime of the last successful log. The value is used in the formula field Last_Import_Successful__c</description>
    <label>Log Last Successful DateTime</label>
    <summarizedField>Import_Log__c.Import_Started_DateTime__c</summarizedField>
    <summaryFilterItems>
        <field>Import_Log__c.Import_Is_Successful__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Import_Log__c.Import_Message__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>