force-app/main/default/objects/Import_Message__c/fields/Message_HttpMethod__c.field-meta.xml
<CustomField>
    <fullName>Message_HttpMethod__c</fullName>
    <description>The HHTP method that was used.</description>
    <label>Http Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>