force-app/main/default/objects/Import_Message__c/fields/Message_Payload__c.field-meta.xml
<CustomField>
    <fullName>Message_Payload__c</fullName>
    <description>The payload contains the actual data that will be loaded into Salesforce objects and fields</description>
    <label>Message Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>