force-app/main/default/objects/Import_Message__c/fields/Message_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Source_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This is an identifier (normally some kind of GUID) from the source system that can link the message in Salesforce to a message in the source system</description>
    <externalId>true</externalId>
    <label>Message Source Id</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>