force-app/main/default/objects/Import_Message__c/fields/Message_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Message_Source_System__c</fullName>
    <description>This is the name of the source system.</description>
    <label>Message Source System</label>
    <length>150</length>
    <type>Text</type>
</CustomField>