force-app/main/default/objects/Import_Message__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <description>With this field you can process messages in different ways. This value defines how the import logic is being processed.
TestType is used for unit tests</description>
    <label>Message Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type1</fullName>
            </value>
            <value>
                <fullName>Type2</fullName>
            </value>
            <value>
                <fullName>TestType</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>