force-app/main/default/objects/Import_Message__c/fields/Message_URL__c.field-meta.xml
<CustomField>
    <fullName>Message_URL__c</fullName>
    <description>The URL that the request was send to.</description>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>