force-app/main/default/objects/Import_Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Message_Source_System__c</columns>
    <columns>Message_Source_Id__c</columns>
    <columns>Message_Type__c</columns>
    <columns>Last_Import_Successful__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>