force-app/main/default/objects/Import_Message__c/listViews/All_Failed_Imports.listView-meta.xml
<ListView>
    <fullName>All_Failed_Imports</fullName>
    <columns>NAME</columns>
    <columns>Message_Source_System__c</columns>
    <columns>Message_Source_Id__c</columns>
    <columns>Message_Type__c</columns>
    <columns>Last_Import_Successful__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Import_Successful__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Failed Imports</label>
</ListView>